plein de petite modif a review

--- a/.gitignore
+++ b/.gitignore
@@ -163,11 +163,11 @@ pense_bete.txt
 test.py
 
 Mammiferes/
-
 Mammiferes_clean/
-
+Mammiferes_clean_nb/
 Mammiferes_augmente/
 
 
-
 myproject_env/
+
+.vscode/
